--- a/src/paths3-window.ui
+++ b/src/paths3-window.ui
@@ -1,57 +1,130 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <interface>
-  <requires lib="gtk" version="4.0"/>
-  <requires lib="Adw" version="1.0"/>
+  <requires lib="gtk" version="4.0" />
+  <requires lib="Adw" version="1.0" />
   <object id="Paths3Window" class="AdwApplicationWindow">
-    <property name="title" translatable="yes">Paths3</property>
+    <property name="title" translatable="yes">Paths</property>
     <property name="default-width">800</property>
     <property name="default-height">600</property>
     <property name="content">
       <object class="AdwToolbarView">
         <child type="top">
           <object class="AdwHeaderBar">
+            <child>
+              <object class="GtkBox">
+                <property name="spacing">10</property>
+                <child>
+                  <object class="GtkToggleButton" id="path_select_button">
+                    <child>
+                      <object class="AdwButtonContent">
+                        <property name="icon-name">draw-line-symbolic</property>
+                        <property
+                                                    name="label"
+                                                    translatable="yes"
+                                                >Paths</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkToggleButton" id="alias_select_button">
+                    <child>
+                      <object class="AdwButtonContent">
+                        <property
+                                                    name="icon-name"
+                                                >chain-link-symbolic</property>
+                        <property
+                                                    name="label"
+                                                    translatable="yes"
+                                                >Aliases</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+              </object>
+            </child>
             <child type="end">
               <object class="GtkMenuButton">
                 <property name="primary">True</property>
                 <property name="icon-name">open-menu-symbolic</property>
-                <property name="tooltip-text" translatable="yes">Main Menu</property>
+                <property
+                                    name="tooltip-text"
+                                    translatable="yes"
+                                >Main Menu</property>
                 <property name="menu-model">primary_menu</property>
               </object>
             </child>
           </object>
         </child>
         <property name="content">
-          <object class="GtkBox" id="main-box">
-            <property name="orientation">vertical</property>
+          <object class="GtkStack" id="main_stack">
             <child>
-              <object class="GtkScrolledWindow">
-                <property name="vexpand">true</property>
-                <child>
-              <object class="GtkBox" id="elem_boxes">
+              <object class="GtkBox" id="main-box">
                 <property name="orientation">vertical</property>
-              </object>
+                <child>
+                  <object class="GtkScrolledWindow">
+                    <property name="vexpand">true</property>
+                    <child>
+                      <object class="GtkBox" id="elem_boxes">
+                        <property name="orientation">vertical</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkBox">
+                    <property name="orientation">horizontal</property>
+                    <property name="spacing">10</property>
+                    <property name="halign">GTK_ALIGN_CENTER</property>
+                    <property name="margin-top">10</property>
+                    <property name="margin-bottom">10</property>
+                    <child>
+                      <object class="GtkButton" id="add_new_path">
+                        <property name="label"> Add new path </property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkButton" id="update_paths">
+                        <property name="label"> Apply </property>
+                      </object>
+                    </child>
+                  </object>
                 </child>
               </object>
             </child>
             <child>
-              <object class="GtkBox">
-                <property name="orientation">horizontal</property>
-                <property name="spacing">10</property>
-                <property name="halign">GTK_ALIGN_CENTER</property>
-                <property name="margin-top">10</property>
-                <property name="margin-bottom">10</property>
-                <child>
-                <object class="GtkButton" id="add_new_path">
-                <property name="label"> Add new path </property>
-              </object>
-                </child>
+            <object class="GtkBox" id="main_box_aliases">
+              <property name="orientation">vertical</property>
               <child>
-                <object class="GtkButton" id="update_paths">
-                <property name="label"> Apply </property>
-              </object>
-                </child>
-              </object>
-
+                <object class="GtkScrolledWindow">
+                  <property name="vexpand">true</property>
+                  <child>
+                    <object class="GtkBox" id="elem_boxes_aliases">
+                      <property name="orientation">vertical</property>
+                    </object>
+                  </child>
+                </object>
+              </child>
+              <child>
+                <object class="GtkBox">
+                  <property name="orientation">horizontal</property>
+                  <property name="spacing">10</property>
+                  <property name="halign">GTK_ALIGN_CENTER</property>
+                  <property name="margin-top">10</property>
+                  <property name="margin-bottom">10</property>
+                  <child>
+                    <object class="GtkButton" id="add_new_alias">
+                      <property name="label"> Add new Alias </property>
+                    </object>
+                  </child>
+                  <child>
+                    <object class="GtkButton" id="update_alias">
+                      <property name="label"> Apply </property>
+                    </object>
+                  </child>
+                </object>
+              </child>
+            </object>
             </child>
           </object>
         </property>
@@ -65,7 +138,10 @@
         <attribute name="action">app.preferences</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_Keyboard Shortcuts</attribute>
+        <attribute
+                    name="label"
+                    translatable="yes"
+                >_Keyboard Shortcuts</attribute>
         <attribute name="action">win.show-help-overlay</attribute>
       </item>
       <item>
@@ -75,4 +151,3 @@
     </section>
   </menu>
 </interface>
-
