free elements once they are no longer needed

--- a/src/paths3-window.ui
+++ b/src/paths3-window.ui
@@ -118,7 +118,7 @@
                     </object>
                   </child>
                   <child>
-                    <object class="GtkButton" id="update_alias">
+                    <object class="GtkButton" id="update_aliases">
                       <property name="label"> Apply </property>
                     </object>
                   </child>
